--- a/package.json
+++ b/package.json
@@ -1,5 +1,37 @@
 {
+  "name": "personal-site",
+  "version": "1.0.0",
+  "private": true,
+  "description": "Personal Site",
+  "author": "Nikita Gamolsky",
+  "keywords": [
+    "gatsby"
+  ],
+  "scripts": {
+    "develop": "gatsby develop",
+    "start": "gatsby develop",
+    "build": "gatsby build",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean"
+  },
+  "dependencies": {
+    "autoprefixer": "^10.4.2",
+    "gatsby": "^4.6.0",
+    "gatsby-plugin-image": "^2.6.0",
+    "gatsby-plugin-manifest": "^4.6.0",
+    "gatsby-plugin-postcss": "^5.6.0",
+    "gatsby-plugin-react-helmet": "^5.6.0",
+    "gatsby-plugin-sharp": "^4.6.0",
+    "gatsby-plugin-sitemap": "^5.6.0",
+    "gatsby-source-filesystem": "^4.6.0",
+    "gatsby-transformer-sharp": "^4.6.0",
+    "postcss": "^8.4.5",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "tailwindcss": "^3.0.17"
+  },
   "devDependencies": {
-    "tailwindcss": "^3.0.15"
+    "@types/react-helmet": "^6.1.5"
   }
 }
