--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.2",
     "gatsby": "^4.6.0",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-image": "^2.6.0",
     "gatsby-plugin-manifest": "^4.6.0",
     "gatsby-plugin-postcss": "^5.6.0",
