--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.2",
+    "dotenv": "^16.0.0",
     "gatsby": "^4.6.0",
-    "gatsby-image": "^3.11.0",
-    "gatsby-plugin-image": "^2.6.0",
+    "gatsby-plugin-graphql-codegen": "^3.1.1",
+    "gatsby-plugin-image": "^2.13.0",
     "gatsby-plugin-manifest": "^4.6.0",
     "gatsby-plugin-postcss": "^5.6.0",
     "gatsby-plugin-react-helmet": "^5.6.0",
-    "gatsby-plugin-sharp": "^4.6.0",
+    "gatsby-plugin-sharp": "^4.13.0",
     "gatsby-plugin-sitemap": "^5.6.0",
-    "gatsby-source-filesystem": "^4.6.0",
-    "gatsby-transformer-sharp": "^4.6.0",
+    "gatsby-plugin-typescript": "^4.13.0",
+    "gatsby-source-contentful": "^7.11.0",
+    "gatsby-source-filesystem": "^4.13.0",
+    "gatsby-transformer-remark": "^5.13.0",
+    "gatsby-transformer-sharp": "^4.13.0",
     "postcss": "^8.4.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -33,6 +37,10 @@
     "tailwindcss": "^3.0.17"
   },
   "devDependencies": {
-    "@types/react-helmet": "^6.1.5"
+    "@types/node": "^17.0.30",
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.3",
+    "@types/react-helmet": "^6.1.5",
+    "typescript": "^4.6.4"
   }
 }
