--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
     "add": "^2.0.6",
     "autoprefixer": "^10.4.2",
     "dotenv": "^16.0.0",
