--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.0.17",
     "yarn": "^1.22.18"
   },
@@ -44,6 +46,7 @@
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
     "@types/react-helmet": "^6.1.5",
+    "@types/react-slick": "^0.23.10",
     "typescript": "^4.6.4"
   }
 }
