--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "tailwindcss": "^3.0.17",
+    "tailwindcss": "^3.3.5",
     "yarn": "^1.22.18"
   },
   "devDependencies": {
@@ -47,6 +47,7 @@
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
     "@types/react-helmet": "^6.1.5",
+    "@types/tailwindcss": "^3.1.0",
     "typescript": "^4.6.4"
   }
 }
