--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "gatsby": "^4.6.0",
+    "gatsby-plugin-breakpoints": "^1.3.11",
     "gatsby-plugin-graphql-codegen": "^3.1.1",
     "gatsby-plugin-image": "^2.13.0",
     "gatsby-plugin-manifest": "^4.6.0",
@@ -43,6 +44,7 @@
     "yarn": "^1.22.18"
   },
   "devDependencies": {
+    "@types/gatsby-plugin-breakpoints": "^1.3.5",
     "@types/node": "^17.0.30",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
