--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
+  "packageManager": "yarn@1.22.19",
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "add": "^2.0.6",
